--- a/themes/bs_report_theme/sass/map.scss
+++ b/themes/bs_report_theme/sass/map.scss
@@ -32,6 +32,7 @@
     position: absolute;
     opacity: 0;
     transition: all 100ms ease;
+    z-index: 100;
 
     &_situation {
       @include center_vertical;
